--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,17 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<h1>The tool</h1>
+
+        <div class="justify">
+            <p>
+            	The yearbook aims to allow students show our yearbook. 
+            	Yearbook is a virtual community where you can meet friends, family or people with common interests. You create your profile, enter your best photos in an album and create as many Yearbooks desired.
+				In each Yearbook you can insert a photo album, promote mailing lists with what went better in the group, bringing together personnel in one place.
+            </p>
+        </div>
+
+        <h1>Brief history...</h1>
+
+        <div class="justify">
+            <p>
+                The yearbook project began in December 2014 as part of the class work of Alberto Silveira Carilo and Gabriela Moreira da Silva at the Federal University of Alfenas. 
+            </p>
+		</div>
