--- a/app/views/home1/index.html.erb
+++ b/app/views/home1/index.html.erb
@@ -40,7 +40,7 @@
 <div class="jumbotron">
   <div class="container">
     <img src="/images/yearbook.jpg" alt="rss feed" width="214" height="151" />
-    <p>This an application to have fun with your friends. Photos, profile's studends of Unifal-MG</p>
+    <p>This an application to have fun with your friends. Photos, studends profile of Unifal-MG</p>
   </div>
 </div>
 
